# example-app

./: README.md  app.spec  build.yml  exampleApp.spec  pyproject.toml
App/: app.py
App/Utils/: titlebar.py
exampleApp/: __main__.py  app.py
exampleApp/Utils/: titlebar.py
style/: theme.json
