[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Saiboth <35424639+Saiboth@users.noreply.github.com>"]
repository = "https://github.com/Saiboth/example-app"
readme = "README.md"
packages = [
    { include = "exampleApp" },
    ]

[tool.poetry.dependencies]
python = "^3.12.2"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
